--- a/src/pages/tadalafil-citrate/tadalafilcitrate.module.scss
+++ b/src/pages/tadalafil-citrate/tadalafilcitrate.module.scss
@@ -1,88 +1,87 @@
 .hero_sectionSildenafilCitrate {
-    position: relative;
-    height: 87%;
-    width: 100%;
-    background: #eff5fb;
-    background: linear-gradient(-125deg, #eff5fb 0%, #dbeafe 100%, #e6e6e8 100%);
+  position: relative;
+  height: 87%;
+  width: 100%;
+  background: #eff5fb;
+  background: linear-gradient(-125deg, #eff5fb 0%, #dbeafe 100%, #e6e6e8 100%);
 
-    .navbar {
-        height: 8vh;
-        background-color: transparent !important;
-        color: #000;
-        padding: 0 !important;
-        margin: 0 !important;
+  .navbar {
+    height: 8vh;
+    background-color: transparent !important;
+    color: #000;
+    padding: 0 !important;
+    margin: 0 !important;
 
-        .navbar-container {
-            padding: 0;
-            display: flex;
-            align-items: center;
+    .navbar-container {
+      padding: 0;
+      display: flex;
+      align-items: center;
 
-            .nav-con {
-                padding-top: 10px;
-                margin-left: 20px;
+      .nav-con {
+        padding-top: 10px;
+        margin-left: 20px;
 
-                .nav-links {
-                    display: flex;
-                    font-size: 0.9rem;
-                    font-weight: 300;
-                    color: #ffffff;
-                }
-            }
-
-            .right-menu {
-                .nav-links {
-                    font-size: 0.8rem;
-                    font-weight: 300;
-                    color: #ffffff;
-                    margin-right: 10px;
-                    padding-top: 20px;
-
-                    img {
-                        margin-right: 10px;
-                    }
-                }
-
-                .loginBtn {
-                    margin-top: 10px;
-                    background-color: transparent !important;
-                    margin-left: 20px;
-                    color: #fff;
-                    font-size: 0.8rem;
-                    font-weight: 300;
-                    border: 2px solid #fff;
-
-                    img {
-                        margin-right: 5px;
-                    }
-                }
-            }
+        .nav-links {
+          display: flex;
+          font-size: 0.9rem;
+          font-weight: 300;
+          color: #ffffff;
         }
+      }
+
+      .right-menu {
+        .nav-links {
+          font-size: 0.8rem;
+          font-weight: 300;
+          color: #ffffff;
+          margin-right: 10px;
+          padding-top: 20px;
+
+          img {
+            margin-right: 10px;
+          }
+        }
+
+        .loginBtn {
+          margin-top: 10px;
+          background-color: transparent !important;
+          margin-left: 20px;
+          color: #fff;
+          font-size: 0.8rem;
+          font-weight: 300;
+          border: 2px solid #fff;
+
+          img {
+            margin-right: 5px;
+          }
+        }
+      }
     }
+  }
 }
 
 .benifitsBG {
-    background-color: #F9FAFD;
+  background-color: #f9fafd;
 
-    .benifits_container {
-        display: flex;
-        justify-content: space-between;
+  .benifits_container {
+    display: flex;
+    justify-content: space-between;
 
-        div {
-            margin-left: -20px;
+    div {
+      margin-left: -20px;
 
-            img {
-                margin-right: 10px;
-                // min-height: 300px;
+      img {
+        margin-right: 10px;
+        // min-height: 300px;
+      }
 
-            }
-
-            .card_text {
-                margin: auto 0;
-                font-weight: 500;
-                font-size: 1.5rem;
-            }
-        }
+      .card_text {
+        margin: auto 0;
+        font-weight: 500;
+        font-size: 1.5rem;
+      }
     }
+  }
 }
 
 // .mainWorkscontainer{
@@ -106,190 +105,190 @@
 //   }
 // }
 .mainWorkscontainer {
-    background: #ffffff;
-    padding: 6rem 0rem;
+  background: #ffffff;
+  padding: 6rem 0rem;
 
-    .mainWorkscontainer_box {
-        margin-bottom: 6rem;
+  .mainWorkscontainer_box {
+    margin-bottom: 6rem;
 
-        .freeHealthImg {
-            width: 50%;
+    .freeHealthImg {
+      width: 50%;
 
-            img {
-                width: 100%;
-            }
-        }
-
-        .freeHealthtxt {
-            width: 50%;
-            padding-left: 2.5rem;
-
-            h2 {
-                font-size: 4.4rem;
-                font-weight: 700;
-                color: #151b23;
-                margin-top: 1.5rem;
-            }
-
-            p {
-                font-size: 1.8rem;
-                font-weight: 400;
-                line-height: 4rem;
-                color: #52525b;
-                margin-top: 1.5rem;
-                margin-bottom: 1.8rem;
-            }
-        }
+      img {
+        width: 100%;
+      }
     }
 
-    .mainWorkscontainer-save {
-        padding-top: 6rem;
+    .freeHealthtxt {
+      width: 50%;
+      padding-left: 2.5rem;
+
+      h2 {
+        font-size: 4.4rem;
+        font-weight: 700;
+        color: #151b23;
+        margin-top: 1.5rem;
+      }
+
+      p {
+        font-size: 1.8rem;
+        font-weight: 400;
+        line-height: 4rem;
+        color: #52525b;
+        margin-top: 1.5rem;
+        margin-bottom: 1.8rem;
+      }
     }
+  }
 
-    .longterm-section {
-        background: #f8fafc;
-        padding: 4rem 0rem 0.1rem 0rem;
+  .mainWorkscontainer-save {
+    padding-top: 6rem;
+  }
 
-        .mainWorkscontainer-reverse {
-            display: flex !important;
-            flex-direction: row-reverse;
-            gap: 2.5rem;
+  .longterm-section {
+    background: #f8fafc;
+    padding: 4rem 0rem 0.1rem 0rem;
 
-            .freeHealthtxt {
-                padding: 0;
-            }
-        }
+    .mainWorkscontainer-reverse {
+      display: flex !important;
+      flex-direction: row-reverse;
+      gap: 2.5rem;
+
+      .freeHealthtxt {
+        padding: 0;
+      }
     }
+  }
 }
 
 .Affordable_container {
-    background: #0f172a;
-    padding: 3rem 0rem;
+  background: #0f172a;
+  padding: 3rem 0rem;
 
-    .Affordable_section {
-        gap: 50px;
+  .Affordable_section {
+    gap: 50px;
 
-        .Affordable_left {
-            h2 {
-                font-size: 4.3rem;
-                font-weight: 700;
-                color: #ffffff;
-                margin-top: 0.5rem;
-            }
+    .Affordable_left {
+      h2 {
+        font-size: 4.3rem;
+        font-weight: 700;
+        color: #ffffff;
+        margin-top: 0.5rem;
+      }
 
-            p {
-                font-size: 1.6rem;
-                font-weight: 300;
-                line-height: 3.2rem;
-                color: #E6E7E9;
-                margin-top: 1.5rem;
-                margin-bottom: 1.8rem;
-            }
-        }
-
-        .Affordable_right {
-            border-radius: 16px;
-            background: #f8fafc;
-            padding: 2.5rem 0rem;
-
-            h6 {
-                font-size: 1.8rem;
-                font-weight: 600;
-                color: #0f172a;
-            }
-
-            div {
-                padding-top: 1.5rem;
-                padding-bottom: 1.5rem;
-
-                h1 {
-                    font-size: 7rem;
-                    font-weight: 600;
-                    color: #2563eb;
-                }
-
-                p {
-                    font-size: 2rem;
-                    font-weight: 400;
-                    font-style: italic;
-                    color: #52525b;
-                }
-            }
-
-            h5 {
-                font-size: 1.6rem;
-                font-weight: 600;
-                color: #0f172a;
-                margin-bottom: 10px;
-                margin-top: 40px;
-            }
-
-            p {
-                font-size: 1.5rem;
-                font-weight: 400;
-                color: #52525b;
-            }
-        }
+      p {
+        font-size: 1.6rem;
+        font-weight: 300;
+        line-height: 3.2rem;
+        color: #e6e7e9;
+        margin-top: 1.5rem;
+        margin-bottom: 1.8rem;
+      }
     }
+
+    .Affordable_right {
+      border-radius: 16px;
+      background: #f8fafc;
+      padding: 2.5rem 0rem;
+
+      h6 {
+        font-size: 1.8rem;
+        font-weight: 600;
+        color: #0f172a;
+      }
+
+      div {
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+
+        h1 {
+          font-size: 7rem;
+          font-weight: 600;
+          color: #2563eb;
+        }
+
+        p {
+          font-size: 2rem;
+          font-weight: 400;
+          font-style: italic;
+          color: #52525b;
+        }
+      }
+
+      h5 {
+        font-size: 1.6rem;
+        font-weight: 600;
+        color: #0f172a;
+        margin-bottom: 10px;
+        margin-top: 40px;
+      }
+
+      p {
+        font-size: 1.5rem;
+        font-weight: 400;
+        color: #52525b;
+      }
+    }
+  }
 }
 
 // Onlien Services
 .OnlineServiceContainer {
-    background: #f8fafc;
-    padding: 5.5rem 0rem;
+  background: #f8fafc;
+  padding: 5.5rem 0rem;
 
-    div {
-        h2 {
-            font-size: 4.2rem;
-            font-weight: 700;
-            color: #0f172a;
-        }
-
-        .OnlineServiceBox_div {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding-top: 5rem;
-            padding: 5rem 1rem;
-
-            .connectorImg {
-                width: 15rem;
-                object-fit: contain;
-                margin-bottom: 16rem;
-            }
-
-            .OnlineServiceBox {
-                flex: 1;
-
-                img {
-                    width: 7rem;
-                    height: 7rem;
-
-                    margin-bottom: 1.5rem;
-                }
-
-                p {
-                    font-size: 1.6rem;
-                    font-weight: 400;
-                    color: #A1A7AE;
-                    margin-top: 1rem;
-                }
-
-                h6 {
-                    font-size: 2.2rem;
-                    font-weight: 500;
-                    color: #0f172a;
-                }
-
-                p {
-                    font-size: 1.6rem;
-                    font-weight: 400;
-                    line-height: 2rem;
-                    color: #52525b;
-                }
-            }
-        }
+  div {
+    h2 {
+      font-size: 4.2rem;
+      font-weight: 700;
+      color: #0f172a;
     }
+
+    .OnlineServiceBox_div {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 5rem;
+      padding: 5rem 1rem;
+
+      .connectorImg {
+        width: 15rem;
+        object-fit: contain;
+        margin-bottom: 16rem;
+      }
+
+      .OnlineServiceBox {
+        flex: 1;
+
+        img {
+          width: 7rem;
+          height: 7rem;
+
+          margin-bottom: 1.5rem;
+        }
+
+        p {
+          font-size: 1.6rem;
+          font-weight: 400;
+          color: #a1a7ae;
+          margin-top: 1rem;
+        }
+
+        h6 {
+          font-size: 2.2rem;
+          font-weight: 500;
+          color: #0f172a;
+        }
+
+        p {
+          font-size: 1.6rem;
+          font-weight: 400;
+          line-height: 2rem;
+          color: #52525b;
+        }
+      }
+    }
+  }
 }
 
 // ul {
@@ -300,201 +299,193 @@
 // }
 
 .width_component {
-    width: 80%;
-    margin: auto;
+  width: 80%;
+  margin: auto;
 }
-
 
 .Free_Consult_link {
-    background: #eb2525 !important;
-    color: #ffffff !important;
-    border-radius: 8px !important;
-    border: none;
-    margin-top: 1px;
-    font-size: 1.5rem;
-    font-weight: 400;
-    padding: 1.5rem 0rem 1.5rem 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-:focus {
-    outline: none;
+  background: #eb2525 !important;
+  color: #ffffff !important;
+  border-radius: 8px !important;
+  border: none;
+  margin-top: 1px;
+  font-size: 1.5rem;
+  font-weight: 400;
+  padding: 1.5rem 0rem 1.5rem 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .accordion {
-    text-align: center;
-    padding: 0rem 0rem 15rem 0rem;
-    padding-top: 4rem;
+  text-align: center;
+  padding: 0rem 0rem 15rem 0rem;
+  padding-top: 4rem;
 
-    h1 {
-        font-size: 5rem;
-        font-weight: 700;
-        color: #0f172a;
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-    }
+  h1 {
+    font-size: 5rem;
+    font-weight: 700;
+    color: #0f172a;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
 
-    p {
-        font-size: 1.6rem;
-        font-weight: 400;
-        line-height: 3rem;
-        color: #52525b;
-        padding: 0rem 1rem 3rem 1rem;
-    }
+  p {
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 3rem;
+    color: #52525b;
+    padding: 0rem 1rem 3rem 1rem;
+  }
 
-    .accordion_wrapper {
-        width: 60%;
-        margin: auto;
-    }
+  .accordion_wrapper {
+    width: 60%;
+    margin: auto;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
-    .OnlineServiceBox_div {
-        width: 80%;
-        margin: 0 auto;
-    }
+  .OnlineServiceBox_div {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
 
-
 @media only screen and (max-width: 900px) {
-    .Affordable_right {
-        padding-left: 1rem !important;
-        padding-right: 1rem !important;
-    }
+  .Affordable_right {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+  }
 
-    .accordion {
-        .accordion_wrapper {
-            width: 90%;
-        }
+  .accordion {
+    .accordion_wrapper {
+      width: 90%;
     }
+  }
 }
 
 @media only screen and (max-width: 768px) {
-    .Affordable_section {
-        flex-direction: column !important;
+  .Affordable_section {
+    flex-direction: column !important;
 
-        .Affordable_left {
-            width: 90% !important;
-        }
-
-        .Affordable_right {
-            width: 60% !important;
-        }
+    .Affordable_left {
+      width: 90% !important;
     }
 
-    .OnlineServiceContainer {
-
-        .OnlineServiceBox_div {
-            display: grid !important;
-            grid-template-columns: repeat(1, 1fr) !important;
-            width: 70%;
-            margin: 0 auto;
-
-            .OnlineServiceBox {}
-
-            .connectorImg {
-                display: none;
-            }
-        }
+    .Affordable_right {
+      width: 60% !important;
     }
+  }
 
-
-    .mainWorkscontainer {
-        background: #ffffff;
-        padding: 6rem 0rem;
-
-        .mainWorkscontainer_box {
-            width: 100%;
-            flex-direction: column;
-            padding: 0 2rem;
-
-            .freeHealthImg,
-            .freeHealthtxt {
-                width: 100%;
-                padding: 0;
-            }
-        }
-    }
-
+  .OnlineServiceContainer {
     .OnlineServiceBox_div {
-        display: grid !important;
-        grid-template-columns: repeat(2, 1fr) !important;
-    }
+      display: grid !important;
+      grid-template-columns: repeat(1, 1fr) !important;
+      width: 70%;
+      margin: 0 auto;
 
-    .benifits_container {
-        padding: 3rem 3rem !important;
-        display: grid !important;
-        grid-template-columns: repeat(2, 1fr) !important;
+      .OnlineServiceBox {
+      }
+
+      .connectorImg {
+        display: none;
+      }
     }
+  }
+
+  .mainWorkscontainer {
+    background: #ffffff;
+    padding: 6rem 0rem;
+
+    .mainWorkscontainer_box {
+      width: 100%;
+      flex-direction: column;
+      padding: 0 2rem;
+
+      .freeHealthImg,
+      .freeHealthtxt {
+        width: 100%;
+        padding: 0;
+      }
+    }
+  }
+
+  .OnlineServiceBox_div {
+    display: grid !important;
+    grid-template-columns: repeat(2, 1fr) !important;
+  }
+
+  .benifits_container {
+    padding: 3rem 3rem !important;
+    display: grid !important;
+    grid-template-columns: repeat(2, 1fr) !important;
+  }
 }
 
 @media only screen and (max-width: 767px) {
-    .width_component {
-        width: 100%;
-    }
+  .width_component {
+    width: 100%;
+  }
 }
 
 @media only screen and (max-width: 700px) {
-    .OnlineServiceContainer h2 {
-        font-size: 3.5rem !important;
-    }
+  .OnlineServiceContainer h2 {
+    font-size: 3.5rem !important;
+  }
 }
 
-
 @media only screen and (max-width: 575px) {
-    .mainWorkscontainer {
-        .mainWorkscontainer_box {
-            .freeHealthtxt {
-                text-align: center;
+  .mainWorkscontainer {
+    .mainWorkscontainer_box {
+      .freeHealthtxt {
+        text-align: center;
 
-                .Free_Consult_link {
-                    margin: 0 auto;
-                }
-            }
+        .Free_Consult_link {
+          margin: 0 auto;
         }
+      }
     }
+  }
 
-    .Free_Consult_link {
-        font-weight: 500;
-    }
+  .Free_Consult_link {
+    font-weight: 500;
+  }
 
-    .HomePagecontainer {
-        .OnlineServiceContainer {
-            div {
-                h2 {
-                    font-size: 2.8rem !important;
-                }
-            }
+  .HomePagecontainer {
+    .OnlineServiceContainer {
+      div {
+        h2 {
+          font-size: 2.8rem !important;
         }
+      }
     }
+  }
 
-    .accordion {
-        h1 {
-            font-size: 3.5rem !important;
+  .accordion {
+    h1 {
+      font-size: 3.5rem !important;
+    }
+  }
+
+  .benifitsBG {
+    padding: 2rem 0;
+
+    .benifits_container {
+      div {
+        margin: 1rem auto;
+      }
+    }
+  }
+
+  .Affordable_container {
+    .Affordable_section {
+      .Affordable_left {
+        text-align: center;
+
+        .Free_Consult_link {
+          margin: 0 auto;
         }
+      }
     }
-
-    .benifitsBG {
-        padding: 2rem 0;
-
-        .benifits_container {
-            div {
-                margin: 1rem auto;
-            }
-        }
-    }
-
-    .Affordable_container {
-        .Affordable_section {
-            .Affordable_left {
-                text-align: center;
-
-                .Free_Consult_link {
-                    margin: 0 auto;
-                }
-            }
-        }
-    }
+  }
 }
