--- a/src/pages/sign-up/signup.module.scss
+++ b/src/pages/sign-up/signup.module.scss
@@ -1,132 +1,131 @@
-$main_background_color: #F8FAFC;
+$main_background_color: #f8fafc;
 $content_padding: 1.5rem 1.75rem;
 $basic_font_size: 1.2rem;
 $important_font_size: 1.5rem;
-$dull_color: #E6E6E8;
-$danger_color: #E53F3C;
-$secondary_color: #B3B3B6;
-$danger_btn_fill_color: #EB2525;
+$dull_color: #e6e6e8;
+$danger_color: #e53f3c;
+$secondary_color: #b3b3b6;
+$danger_btn_fill_color: #eb2525;
 
 .headText {
-    font-size: $important_font_size;
-    font-weight: 500;
+  font-size: $important_font_size;
+  font-weight: 500;
 }
 
 .primaryText {
-    font-size: $basic_font_size;
+  font-size: $basic_font_size;
 
-    span {
-        color: #2563EB;
-        font-weight: 500;
+  span {
+    color: #2563eb;
+    font-weight: 500;
 
-        cursor: pointer;
-    }
+    cursor: pointer;
+  }
 }
 
 .pageHead {
-    font-size: 4rem;
-    font-weight: bold;
+  font-size: 4rem;
+  font-weight: bold;
 }
 
 .screenContainer {
+  width: 100%;
+  height: auto;
+  min-height: calc(100vh - 8vh);
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  background-color: #f8fafc;
+
+  .contentContainer {
     width: 100%;
     height: auto;
-    min-height: calc(100vh - 8vh);
     margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    background-color: #F8FAFC;
+    max-width: 1200px;
+    padding-top: 10vh;
 
-    .contentContainer {
-        width: 100%;
-        height: auto;
-        margin: 0;
-        max-width: 1200px;
-        padding-top: 10vh;
-
-        .pageHead {
-            margin: 0 auto;
-            text-align: center;
-        }
-
-        .secondaryPageText {
-            // padding: 0 2rem;
-            max-width: 48rem;
-            margin: 0 auto;
-        }
-
-        .secondaryPageText {
-
-            padding: 1rem 2rem;
-        }
-
-        .formContainer {
-            width: 48rem;
-            height: auto;
-            margin: 0 auto;
-            background-color: white;
-
-            padding: 2.4rem;
-            border-radius: 20px;
-
-            .rowContent {
-                display: flex;
-                justify-content: space-between;
-
-                .remebermeCheckboxContainer {
-                    height: auto;
-                    display: flex;
-                    align-items: center;
-                    width: 100%;
-
-                    .rememberMecheckbox {
-                        width: 1.5rem;
-                        height: 1.5rem;
-                        margin: 0;
-                        padding: 0;
-                        margin-right: 1rem;
-                    }
-
-                    p {
-                        margin-top: 1rem;
-                    }
-                }
-            }
-
-            .formBtn {
-                width: 100%;
-                height: 5.5rem;
-
-                font-size: $important_font_size;
-                color: white;
-
-                border-radius: 8px;
-                outline: none;
-                border: 0;
-
-                font-size: $important_font_size;
-                font-weight: 500;
-
-                display: flex;
-                align-items: center;
-                justify-content: center;
-
-                img {
-                    margin-right: 1rem;
-                }
-
-                margin: 1.2rem 0;
-            }
-
-            .dangerBtn {
-                background-color: $danger_btn_fill_color;
-            }
-
-            .secondaryBtn {
-                color: #0F172A;
-                background-color: $main_background_color;
-            }
-        }
+    .pageHead {
+      margin: 0 auto;
+      text-align: center;
     }
+
+    .secondaryPageText {
+      // padding: 0 2rem;
+      max-width: 48rem;
+      margin: 0 auto;
+    }
+
+    .secondaryPageText {
+      padding: 1rem 2rem;
+    }
+
+    .formContainer {
+      max-width: 48rem;
+      height: auto;
+      margin: 0 auto;
+      background-color: white;
+
+      padding: 2.4rem;
+      border-radius: 20px;
+
+      .rowContent {
+        display: flex;
+        justify-content: space-between;
+
+        .remebermeCheckboxContainer {
+          height: auto;
+          display: flex;
+          align-items: center;
+          width: 100%;
+
+          .rememberMecheckbox {
+            width: 1.5rem;
+            height: 1.5rem;
+            margin: 0;
+            padding: 0;
+            margin-right: 1rem;
+          }
+
+          p {
+            margin-top: 1rem;
+          }
+        }
+      }
+
+      .formBtn {
+        width: 100%;
+        height: 5.5rem;
+
+        font-size: $important_font_size;
+        color: white;
+
+        border-radius: 8px;
+        outline: none;
+        border: 0;
+
+        font-size: $important_font_size;
+        font-weight: 500;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        img {
+          margin-right: 1rem;
+        }
+
+        margin: 1.2rem 0;
+      }
+
+      .dangerBtn {
+        background-color: $danger_btn_fill_color;
+      }
+
+      .secondaryBtn {
+        color: #0f172a;
+        background-color: $main_background_color;
+      }
+    }
+  }
 }
