--- a/src/pages/sign-up/signup.module.scss
+++ b/src/pages/sign-up/signup.module.scss
@@ -23,6 +23,14 @@ $danger_btn_fill_color: #eb2525;
   }
 }
 
+.reveal {
+  padding: 5px;
+  margin-top: 5px;
+  border-radius: 5px;
+  background-color: white;
+  margin-bottom: 15px;
+}
+
 .pageHead {
   font-size: 4rem;
   font-weight: bold;
