--- a/src/pages/sign-up/signup.module.scss
+++ b/src/pages/sign-up/signup.module.scss
@@ -24,11 +24,12 @@ $danger_btn_fill_color: #eb2525;
 }
 
 .reveal {
-  padding: 5px;
-  margin-top: 5px;
+  padding: 15px 5px;
+  margin-top: 28px;
   border-radius: 5px;
   background-color: white;
   margin-bottom: 15px;
+  width: 100%;
 }
 
 .pageHead {
